tests/fixtures/invalid/max_bytes_float.py
# Cannot call max() with Bytes, Float
x = max(b"hello", 1.0)
